--- a/Resources/views/Dropzone/confirmCloseUnterminatedDropForm.html.twig
+++ b/Resources/views/Dropzone/confirmCloseUnterminatedDropForm.html.twig
@@ -3,7 +3,7 @@
 
 <div class="panel panel-default">
     <div class="panel-body"><p class="text-muted">
-            <span class="glyphicon icon-info-sign"></span> {{ 'dropzone_startedNotValidatedYet_infos'|trans({},'icap_dropzone') }}
+            <span class="fa fa-info-circle"></span> {{ 'dropzone_startedNotValidatedYet_infos'|trans({},'icap_dropzone') }}
         </p>
     </div>
 </div>
