--- a/Resources/views/Dropzone/edit.html.twig
+++ b/Resources/views/Dropzone/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends "IcapDropzoneBundle::layout.html.twig" %}
 {% block resourceBreadcrumb %}
-    <li class="active"><span class="glyphicon icon-edit"></span> {{ dropzone.resourceNode.name }}</li>
+    <li class="active"><span class=" fa fa-pencil-square-o"></span> {{ dropzone.resourceNode.name }}</li>
 {% endblock %}
 
 {% block dropzone_content %}
@@ -8,10 +8,11 @@
         <h2>
             {{ 'Edit evaluation'|trans({}, 'icap_dropzone') }}
             <div class="btn-group pull-right">
-          
-        
-            {% render controller('IcapNotificationBundle:FollowerResource:renderForm', {'resourceId': dropzone.resourceNode.id, 'resourceClass': dropzone.resourceNode.class}) %}
-            <a class="btn btn-default " href="{{ path('icap_dropzone_drops', {'resourceId': dropzone.id}) }}"><span class="glyphicon icon-list"></span> {{ 'See copies'|trans({}, 'icap_dropzone') }}</a>
+
+
+                {% render controller('IcapNotificationBundle:FollowerResource:renderForm', {'resourceId': dropzone.resourceNode.id, 'resourceClass': dropzone.resourceNode.class}) %}
+                <a class="btn btn-default " href="{{ path('icap_dropzone_drops', {'resourceId': dropzone.id}) }}"><span
+                            class="fa fa-list"></span> {{ 'See copies'|trans({}, 'icap_dropzone') }}</a>
             </div>
         </h2>
         {{ macros.flashBox() }}
