--- a/Resources/views/macros.html.twig
+++ b/Resources/views/macros.html.twig
@@ -27,7 +27,7 @@
                                 <td>
                                     <a href="{{ path('icap_dropzone_delete_document', {'resourceId': dropzone.id, 'dropId': drop.id, 'documentId': document.id}) }}"
                                        class="btn btn-danger btn-sm pull-right launch-modal">
-                                        <span class="glyphicon icon-trash"></span>
+                                        <span class="fa fa-trash-o"></span>
                                         {{ 'Delete'|trans({}, 'icap_dropzone') }}
                                     </a>
                                 </td>
