--- a/Resources/views/Correction/correctionInstructions.html.twig
+++ b/Resources/views/Correction/correctionInstructions.html.twig
@@ -1,10 +1,11 @@
 <div class="panel-group" id="correction-instruction-accordion">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <a class="accordion-toggle" data-toggle="collapse" data-parent="#correction-instruction" href="#correction-instruction">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#correction-instruction"
+               href="#correction-instruction">
                 <h4 class="panel-title">
-                    <span class="glyphicon icon-angle-down"></span>
-                    <span class="glyphicon icon-angle-right" style="display: none;"></span>
+                    <span class="fa fa-angle-down"></span>
+                    <span class="fa fa-angle-right" style="display: none;"></span>
                     {{ 'Examiners Instructions'|trans({}, 'icap_dropzone') }}
                 </h4>
             </a>
@@ -21,20 +22,20 @@
             background-color: #fff;
         }
 
-        .panel-default{
-            margin-top:10px;
+        .panel-default {
+            margin-top: 10px;
         }
     </style>
 
     <script>
-        $(document).on('ready', function() {
+        $(document).on('ready', function () {
             $('#correction-instruction').on('hide.bs.collapse', function () {
-                $('#accordion .icon-angle-down').show();
-                $('#accordion .icon-angle-right').hide();
+                $('#accordion .fa-angle-down').show();
+                $('#accordion .fa-angle-right').hide();
             });
             $('#correction-instruction').on('show.bs.collapse', function () {
-                $('#accordion .icon-angle-right').show();
-                $('#accordion .icon-angle-down').hide();
+                $('#accordion .fa-angle-right').show();
+                $('#accordion .fa-angle-down').hide();
             });
         });
     </script>
