--- a/Resources/views/Correction/deleteCorrection.html.twig
+++ b/Resources/views/Correction/deleteCorrection.html.twig
@@ -1,6 +1,6 @@
 {% extends "IcapDropzoneBundle::layout.html.twig" %}
 {% block resourceBreadcrumb %}
-    <li class="active"><span class="glyphicon icon-file"></span> {{ dropzone.resourceNode.name }}</li>
+    <li class="active"><span class="fa fa-file"></span> {{ dropzone.resourceNode.name }}</li>
 {% endblock %}
 {% block dropzone_content %}
     <div class="col-md-12">
