--- a/Resources/views/Correction/reportCorrection.html.twig
+++ b/Resources/views/Correction/reportCorrection.html.twig
@@ -1,13 +1,13 @@
 {% extends "IcapDropzoneBundle::layout.html.twig" %}
 {% block resourceBreadcrumb %}
-    <li class="active"><span class="glyphicon icon-file"></span> {{ dropzone.resourceNode.name }}</li>
+    <li class="active"><span class="fa fa-file"></span> {{ dropzone.resourceNode.name }}</li>
 {% endblock %}
 {% block dropzone_content %}
     <div class="col-md-12">
         <hr>
-            <h4 class="modal-title">{{ 'Warning'|trans({}, 'icap_dropzone') }}</h4>
+        <h4 class="modal-title">{{ 'Warning'|trans({}, 'icap_dropzone') }}</h4>
         {% include "IcapDropzoneBundle:Correction:reportCorrectionForm.html.twig" %}
-        </div>
+    </div>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
