--- a/Resources/views/Drop/dropsDelete.html.twig
+++ b/Resources/views/Drop/dropsDelete.html.twig
@@ -1,6 +1,6 @@
 {% extends "IcapDropzoneBundle::layout.html.twig" %}
 {% block resourceBreadcrumb %}
-    <li class="active"><span class="glyphicon icon-file"></span> {{ dropzone.resourceNode.name }}</li>
+    <li class="active"><span class="fa fa-file"></span> {{ dropzone.resourceNode.name }}</li>
     <li class="active">Copies made</li>
     <li class="active">Invalidate a drop</li>
 {% endblock %}
