--- a/Resources/views/Dropzone/recallInstruction.html.twig
+++ b/Resources/views/Dropzone/recallInstruction.html.twig
@@ -3,8 +3,8 @@
         <div class="panel-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#recall-instruction" href="#recall-instruction">
                 <h4 class="panel-title">
-                    <span class="glyphicon icon-angle-down"></span>
-                    <span class="glyphicon icon-angle-right" style="display: none;"></span>
+                    <span class="fa fa-angle-down"></span>
+                    <span class="fa fa-angle-right" style="display: none;"></span>
                     {{ 'Recall instructions'|trans({}, 'icap_dropzone') }}
                 </h4>
             </a>
@@ -25,12 +25,12 @@
     <script>
         $(document).on('ready', function() {
             $('#recall-instruction').on('hide.bs.collapse', function () {
-                $('#accordion .icon-angle-down').show();
-                $('#accordion .icon-angle-right').hide();
+                $('#accordion .fa-angle-down').show();
+                $('#accordion .fa-angle-right').hide();
             });
             $('#recall-instruction').on('show.bs.collapse', function () {
-                $('#accordion .icon-angle-right').show();
-                $('#accordion .icon-angle-down').hide();
+                $('#accordion .fa-angle-right').show();
+                $('#accordion .fa-angle-down').hide();
             });
         });
     </script>
