--- a/Resources/views/Notification/notification_drop_grade_available.html.twig
+++ b/Resources/views/Notification/notification_drop_grade_available.html.twig
@@ -1,5 +1,9 @@
 {% if notification.details.dropzoneId is defined  %}
-	<a href="{{ path('icap_dropzone_open', {'resourceId' : notification.details.dropzoneId}) }}" target="_blank"><span class="glyphicon icon-warning-sign"></span> {{ notification.actionKey|trans({'%dropzone%' : notification.details.resource.name}, 'notification')}}</a>
+    <a href="{{ path('icap_dropzone_open', {'resourceId' : notification.details.dropzoneId}) }}" target="_blank"><span
+                class="fa fa-exclamation-triangle"></span> {{ notification.actionKey|trans({'%dropzone%' : notification.details.resource.name}, 'notification') }}
+    </a>
 {% else %}
-	<a href="#" ><span class="glyphicon icon-warning-sign"></span>{{ notification.actionKey|trans({'%dropzone%' : notification.details.resource.name}, 'notification')}}</a>
+    <a href="#"><span
+                class="fa fa-exclamation-triangle"></span>{{ notification.actionKey|trans({'%dropzone%' : notification.details.resource.name}, 'notification') }}
+    </a>
 {% endif %}
